# blueprint-python3

./: Dockerfile  maintain this blueprint.md  pyproject.toml
alfred/: ci.py  docker.py  start.py
